[package]
name = "subscriber"
version = "11.45.14"
edition = "2021"
description = "Proxies Subscriber use Cloudflare Workers"
repository = "https://github.com/Minearm-DEB/akasha-subscriber/"
license = "AGPL-3.0"
authors = ["Minearm-RPM <ms@minearm.org>"]

[package.metadata.release]
release = false

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version = "0.5.0", features = ["http", "axum"] }
worker-macros = { version = "0.5.0", features = ["http"] }
axum = { version = "0.8", default-features = false }
console_error_panic_hook = "0.1.1"
serde_yaml_ok = "0.9"
base64 = "0.22.1"
reqwest = { version = "0.12.9", features = ["json"] }
serde = { version = "1.0.215", features = ["derive"] }
percent-encoding = "2.3.1"
